--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -62,3 +62,7 @@ div button:hover{
     background-color: rgb(249, 72, 36);
    
 }
+div button:active {
+    background-color: rgb(17, 17, 16);
+   
+}
