--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -1,26 +1,76 @@
 .container{
     display: flex;
     width: 500px;
-    margin:10px auto ;
+    height: 150px;
+    margin:0px auto ;
     justify-content: center;
     align-items: center;
+    padding-bottom: 5px;
     border-bottom: 1px black solid;
     
 }
 .leftContainer{
     display: flex;
     flex-direction: column;
-    background-color: rgb(248, 148, 94);
-    width: 400px;
+    
+    width: 380px;
+    margin-right: 20px;
+    height: 100%;
+    justify-content: space-between;
+}
+div.title{
+    height: auto;
+    font-size: 20px;
+}
+div.data{
+    display: flex;
+    height: auto;
+    justify-content: space-between;
+    margin-top:20px ;
+    
 }
 .buttons{
     display: flex;
-    margin-bottom: 15px;
+    height: 60px;
+    margin-bottom: 0px ;
+    justify-content: space-between;
+    align-content: flex-end;
+    align-items: flex-end;
+    
 
 }
-.img{
-    background-color: brown;
+div.minus,div.plus{
+    width: 60px;
+    height: 40px;
+    background-color: #aaa;
+    line-height: 40px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 20px;
+    transition: all 0.3s;
+    user-select: none;
+}
+div.minus:hover,div.plus:hover{
+    background-color: rgb(248, 12, 12);
+}
+div.minus:active,div.plus:active{
+    background-color: rgb(243, 121, 121);
+}
+div.number{
+    height: 40px;
+    line-height: 40px;
+    font-size: 20px;
+}
+div.img{
+    height: 100%;
     width: 100px;
     margin-left: 5px;
-    margin-bottom: 15px;
+    vertical-align: auto;
+    
+}
+img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    
 }
